Finalizing database design
