# src/controllers/auth.controller.js
@@ -3,7 +3,7 @@ import asyncHandler from '../utils/async-handler.js'
 import { publicUser, signToken, tokenCookieOptions } from '../utils/auth.js'
 
 const sendAuthenticatedUser = (response, statusCode, user) => {
-  const token = signToken(user.id, user.tokenVersion)
+  const token = signToken(user.id, user.tokenVersion, user.role)
   response.status(statusCode).cookie('token', token, tokenCookieOptions).json({ user: publicUser(user) })
 }
 
